Implemented new HallOfFame activity: storing scores using sqlite3 local db w/ Room persistence library, using RecyclerView + custom adapter. Restructured packages to accomodate architectural conventions.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="level_value">0</string>
     <string name="level_title">NIVEL</string>
     <string name="game_over_message">Fin</string>
-    <string name="restart_game">Reiniciar</string>
+    <string name="continue_game">SIGUIENTE</string>
     <string name="exit_game">Salir</string>
+    <string name="title_activity_hall_of_fame">Hall of Fame</string>
+    <string name="player_name">Jugador</string>
+
 </resources>
